# aiir

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  README.md  SECURITY.md  SETUP.md  aiir-install.sh  mkdocs.yml  pyproject.toml  setup-client-linux.sh  setup-client-macos.sh  setup-client-windows.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  deployment.md  getting-started.md  index.md  mcp-reference.md  security.md  user-guide.md
scripts/: setup-aiir.sh  setup-sift.sh  setup-windows.ps1
src/aiir_cli/: __init__.py  approval_auth.py  case_io.py  identity.py  main.py  verification.py
src/aiir_cli/commands/: approve.py  audit_cmd.py  backup.py  client_setup.py  config.py  dashboard.py  evidence.py  execute.py  join.py  migrate.py  reject.py  report.py  review.py  service.py  setup.py  sync.py  todo.py  update.py
src/aiir_cli/setup/: config_gen.py  detect.py  wizard.py
src/air_cli/: __init__.py  approval_auth.py  case_io.py  identity.py  main.py
src/air_cli/commands/: approve.py  config.py  evidence.py  execute.py  reject.py  review.py
src/vhir_cli/: __init__.py  case_io.py  gateway.py  main.py  verification.py
src/vhir_cli/commands/: client_setup.py  config.py  evidence.py  join.py  review.py  service.py  setup.py  update.py
tests/: test_approval_auth.py  test_approve_hmac.py  test_approve_reject.py  test_audit_cmd.py  test_case_io.py  test_client_setup.py  test_config.py  test_evidence_cmds.py  test_execute.py  test_identity.py  test_join.py  test_migrate.py  test_provenance.py  test_report.py  test_review.py  test_service.py  test_setup.py  test_sync.py  test_todo.py  test_update.py  test_verification.py
